src/main/gen/antlr/aadl/AadlParser.java
// Generated from /Users/mstafford/Projects/thesis/SafeStubGeneration/src/main/antlr/Aadl.g4 by ANTLR 4.7.2

    package antlr.aadl;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AadlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, COMMENT=44, PORT_TYPE=45, 
		LITERAL_STRING=46, EQUALS=47, AGREE=48, ANNEX=49, ANNEX_OPEN=50, ANNEX_CLOSE=51, 
		BOOLEAN=52, NUM=53, IDENTIFIER=54, WS=55;
	public static final int
		RULE_aadl = 0, RULE_aadlPackage = 1, RULE_packageBody = 2, RULE_typeAlias = 3, 
		RULE_withStatement = 4, RULE_var_list = 5, RULE_agree_annex = 6, RULE_agree_node = 7, 
		RULE_node_body = 8, RULE_object = 9, RULE_objectType = 10, RULE_objectBody = 11, 
		RULE_connectionsPart = 12, RULE_connection = 13, RULE_featurePart = 14, 
		RULE_subcomponentsPart = 15, RULE_subcomponent = 16, RULE_feature = 17, 
		RULE_port = 18, RULE_annex = 19, RULE_agreeBody = 20, RULE_agreeStatement = 21, 
		RULE_equation = 22, RULE_constant = 23, RULE_assign = 24, RULE_assignment = 25, 
		RULE_var_declaration = 26, RULE_assume = 27, RULE_guarantee = 28, RULE_expression = 29, 
		RULE_leftHandSide = 30, RULE_value = 31, RULE_if_expression = 32, RULE_function_call = 33, 
		RULE_type = 34, RULE_operation = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"aadl", "aadlPackage", "packageBody", "typeAlias", "withStatement", "var_list", 
			"agree_annex", "agree_node", "node_body", "object", "objectType", "objectBody", 
			"connectionsPart", "connection", "featurePart", "subcomponentsPart", 
			"subcomponent", "feature", "port", "annex", "agreeBody", "agreeStatement", 
			"equation", "constant", "assign", "assignment", "var_declaration", "assume", 
			"guarantee", "expression", "leftHandSide", "value", "if_expression", 
			"function_call", "type", "operation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'package'", "'end'", "';'", "'public'", "'data'", "'extends'", 
			"'with'", "','", "'node'", "'('", "')'", "'returns'", "'let'", "'tel'", 
			"'implementation'", "'system'", "'connections'", "':'", "'port'", "'->'", 
			"'{Communication_Properties::Timing => immediate;}'", "'features'", "'subcomponents'", 
			"'eq'", "'const'", "'assign'", "'assume'", "'guarantee'", "'if'", "'then'", 
			"'else'", "'::'", "'+'", "'-'", "'*'", "'/'", "'=>'", "'>'", "'<'", "'<='", 
			"'>='", "'and'", "'or'", null, null, null, "'='", "'agree'", "'annex'", 
			"'{**'", "'**}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "COMMENT", "PORT_TYPE", 
			"LITERAL_STRING", "EQUALS", "AGREE", "ANNEX", "ANNEX_OPEN", "ANNEX_CLOSE", 
			"BOOLEAN", "NUM", "IDENTIFIER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aadl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AadlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AadlContext extends ParserRuleContext {
		public List<AadlPackageContext> aadlPackage() {
			return getRuleContexts(AadlPackageContext.class);
		}
		public AadlPackageContext aadlPackage(int i) {
			return getRuleContext(AadlPackageContext.class,i);
		}
		public AadlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aadl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterAadl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitAadl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitAadl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AadlContext aadl() throws RecognitionException {
		AadlContext _localctx = new AadlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_aadl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				aadlPackage();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AadlPackageContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(AadlParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AadlParser.IDENTIFIER, i);
		}
		public PackageBodyContext packageBody() {
			return getRuleContext(PackageBodyContext.class,0);
		}
		public AadlPackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aadlPackage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterAadlPackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitAadlPackage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitAadlPackage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AadlPackageContext aadlPackage() throws RecognitionException {
		AadlPackageContext _localctx = new AadlPackageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_aadlPackage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__0);
			setState(78);
			match(IDENTIFIER);
			setState(79);
			packageBody();
			setState(80);
			match(T__1);
			setState(81);
			match(IDENTIFIER);
			setState(82);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageBodyContext extends ParserRuleContext {
		public List<WithStatementContext> withStatement() {
			return getRuleContexts(WithStatementContext.class);
		}
		public WithStatementContext withStatement(int i) {
			return getRuleContext(WithStatementContext.class,i);
		}
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public List<TypeAliasContext> typeAlias() {
			return getRuleContexts(TypeAliasContext.class);
		}
		public TypeAliasContext typeAlias(int i) {
			return getRuleContext(TypeAliasContext.class,i);
		}
		public List<Agree_annexContext> agree_annex() {
			return getRuleContexts(Agree_annexContext.class);
		}
		public Agree_annexContext agree_annex(int i) {
			return getRuleContext(Agree_annexContext.class,i);
		}
		public PackageBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterPackageBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitPackageBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitPackageBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageBodyContext packageBody() throws RecognitionException {
		PackageBodyContext _localctx = new PackageBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packageBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__3);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(85);
				withStatement();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__15) | (1L << ANNEX))) != 0)) {
				{
				setState(94);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__15:
					{
					setState(91);
					object();
					}
					break;
				case T__4:
					{
					setState(92);
					typeAlias();
					}
					break;
				case ANNEX:
					{
					setState(93);
					agree_annex();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeAliasContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(AadlParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AadlParser.IDENTIFIER, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeAliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeAlias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterTypeAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitTypeAlias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitTypeAlias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeAliasContext typeAlias() throws RecognitionException {
		TypeAliasContext _localctx = new TypeAliasContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeAlias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__4);
			setState(100);
			match(IDENTIFIER);
			setState(101);
			match(T__5);
			setState(102);
			type();
			setState(103);
			match(T__1);
			setState(104);
			match(IDENTIFIER);
			setState(105);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WithStatementContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(AadlParser.IDENTIFIER, 0); }
		public WithStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_withStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterWithStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitWithStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitWithStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WithStatementContext withStatement() throws RecognitionException {
		WithStatementContext _localctx = new WithStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_withStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__6);
			setState(108);
			match(IDENTIFIER);
			setState(109);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_listContext extends ParserRuleContext {
		public List<Var_declarationContext> var_declaration() {
			return getRuleContexts(Var_declarationContext.class);
		}
		public Var_declarationContext var_declaration(int i) {
			return getRuleContext(Var_declarationContext.class,i);
		}
		public Var_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterVar_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitVar_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitVar_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_listContext var_list() throws RecognitionException {
		Var_listContext _localctx = new Var_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			var_declaration();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(112);
				match(T__7);
				setState(113);
				var_declaration();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Agree_annexContext extends ParserRuleContext {
		public TerminalNode ANNEX() { return getToken(AadlParser.ANNEX, 0); }
		public TerminalNode AGREE() { return getToken(AadlParser.AGREE, 0); }
		public TerminalNode ANNEX_OPEN() { return getToken(AadlParser.ANNEX_OPEN, 0); }
		public TerminalNode ANNEX_CLOSE() { return getToken(AadlParser.ANNEX_CLOSE, 0); }
		public List<Agree_nodeContext> agree_node() {
			return getRuleContexts(Agree_nodeContext.class);
		}
		public Agree_nodeContext agree_node(int i) {
			return getRuleContext(Agree_nodeContext.class,i);
		}
		public Agree_annexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agree_annex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterAgree_annex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitAgree_annex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitAgree_annex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Agree_annexContext agree_annex() throws RecognitionException {
		Agree_annexContext _localctx = new Agree_annexContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_agree_annex);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ANNEX);
			setState(120);
			match(AGREE);
			setState(121);
			match(ANNEX_OPEN);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(122);
				agree_node();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(ANNEX_CLOSE);
			setState(129);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Agree_nodeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(AadlParser.IDENTIFIER, 0); }
		public List<Var_listContext> var_list() {
			return getRuleContexts(Var_listContext.class);
		}
		public Var_listContext var_list(int i) {
			return getRuleContext(Var_listContext.class,i);
		}
		public Node_bodyContext node_body() {
			return getRuleContext(Node_bodyContext.class,0);
		}
		public Agree_nodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agree_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterAgree_node(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitAgree_node(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitAgree_node(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Agree_nodeContext agree_node() throws RecognitionException {
		Agree_nodeContext _localctx = new Agree_nodeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_agree_node);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__8);
			setState(132);
			match(IDENTIFIER);
			setState(133);
			match(T__9);
			setState(134);
			var_list();
			setState(135);
			match(T__10);
			setState(136);
			match(T__11);
			setState(137);
			match(T__9);
			setState(138);
			var_list();
			setState(139);
			match(T__10);
			setState(140);
			match(T__2);
			setState(141);
			match(T__12);
			setState(142);
			node_body();
			setState(143);
			match(T__13);
			setState(144);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Node_bodyContext extends ParserRuleContext {
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public Node_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterNode_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitNode_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitNode_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Node_bodyContext node_body() throws RecognitionException {
		Node_bodyContext _localctx = new Node_bodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_node_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(146);
				assignment();
				setState(147);
				match(T__2);
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectContext extends ParserRuleContext {
		public ObjectTypeContext objectType() {
			return getRuleContext(ObjectTypeContext.class,0);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(AadlParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AadlParser.IDENTIFIER, i);
		}
		public ObjectBodyContext objectBody() {
			return getRuleContext(ObjectBodyContext.class,0);
		}
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_object);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			objectType();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(155);
				match(T__14);
				}
			}

			setState(158);
			match(IDENTIFIER);
			setState(159);
			objectBody();
			setState(160);
			match(T__1);
			setState(161);
			match(IDENTIFIER);
			setState(162);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectTypeContext extends ParserRuleContext {
		public ObjectTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterObjectType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitObjectType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitObjectType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectTypeContext objectType() throws RecognitionException {
		ObjectTypeContext _localctx = new ObjectTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_objectType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(164);
			match(T__15);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectBodyContext extends ParserRuleContext {
		public SubcomponentsPartContext subcomponentsPart() {
			return getRuleContext(SubcomponentsPartContext.class,0);
		}
		public FeaturePartContext featurePart() {
			return getRuleContext(FeaturePartContext.class,0);
		}
		public ConnectionsPartContext connectionsPart() {
			return getRuleContext(ConnectionsPartContext.class,0);
		}
		public AnnexContext annex() {
			return getRuleContext(AnnexContext.class,0);
		}
		public ObjectBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterObjectBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitObjectBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitObjectBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectBodyContext objectBody() throws RecognitionException {
		ObjectBodyContext _localctx = new ObjectBodyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_objectBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__22) {
				{
				setState(166);
				subcomponentsPart();
				}
			}

			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(169);
				featurePart();
				}
			}

			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(172);
				connectionsPart();
				}
			}

			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ANNEX) {
				{
				setState(175);
				annex();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConnectionsPartContext extends ParserRuleContext {
		public List<ConnectionContext> connection() {
			return getRuleContexts(ConnectionContext.class);
		}
		public ConnectionContext connection(int i) {
			return getRuleContext(ConnectionContext.class,i);
		}
		public ConnectionsPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connectionsPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).enterConnectionsPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AadlListener ) ((AadlListener)listener).exitConnectionsPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AadlVisitor ) return ((AadlVisitor<? extends T>)visitor).visitConnectionsPart(this);
			else return visitor.visitChildren(this);
		}
	}
